# mimir

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  config.yaml
.github/workflows/: ci.yml
benchmarks/: bench_main.cpp
scripts/: benchmark.sh  run_tests.sh  stress_test.sh
src/: main.cpp
src/cli/: main.cpp
src/config/: config.cpp  config.hpp
src/expiration/: expiry_manager.hpp
src/logging/: logger.hpp
src/network/: connection.cpp  connection.hpp  tcp_server.cpp  tcp_server.hpp
src/persistence/: snapshot.cpp  snapshot.hpp
src/protocol/: command.hpp  parser.cpp  parser.hpp  serializer.cpp  serializer.hpp
src/server/: command_handler.cpp  command_handler.hpp  server.cpp  server.hpp
src/storage/: store.cpp  store.hpp
src/threadpool/: thread_pool.hpp
src/wal/: wal.cpp  wal.hpp
tests/: test_command_handler.cpp  test_parser.cpp  test_storage.cpp  test_threadpool.cpp  test_wal.cpp
